Fix merge pane overflowing without scrollbar
https://forums.zotero.org/discussion/114241/zotero-7-beta-merge-unusable-with-long-author-lists

--- a/scss/elements/_duplicatesMergePane.scss
+++ b/scss/elements/_duplicatesMergePane.scss
@@ -4,6 +4,7 @@ duplicates-merge-pane {
 
 	groupbox {
 		margin: 8px 0 0 0;
+		min-height: 0;
 	}
 
 	#zotero-duplicates-merge-button
